# rag-demo

./: .env.example  README.md  pyproject.toml
rag_demo/: handson_exercises.ipynb  openai-finetuning-example.ipynb  rag_demo_notebook_hugging_face.ipynb  rag_demo_notebook_openai.ipynb
rag_demo/colab_notebooks/: handson_exercises_colab.ipynb  rag_demo_notebook_hugging_face_colab.ipynb  rag_demo_notebook_openai_colab.ipynb
