[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.16"
python-dotenv = "^1.0.1"
chromadb = "^0.6.3"
llama-index-vector-stores-chroma = "^0.4.1"
llama-index-embeddings-huggingface = "^0.5.1"
llama-index-llms-huggingface = "^0.4.2"
llama-index-llms-huggingface-api = "^0.3.1"
sentence-transformers = "^3.4.1"
faiss-cpu = "^1.10.0"
streamlit = "^1.42.1"
transformers = "^4.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
